--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,19 @@
 <resources>
     <string name="app_name">StoryApp</string>
+    <string name="signup">Daftar</string>
+    <string name="login">Masuk</string>
+    <string name="message_welcome_page">Berbagai pengalaman berharga dengan mudah di StoryApp</string>
+    <string name="title_welcome_page">Selamat datang di StoryApp!</string>
+    <string name="title_signup_page">Lengkapi data dirimu di bawah ini ya</string>
+    <string name="email">Email</string>
+    <string name="password">Password</string>
+    <string name="message_login_page">Masukkan dulu datamu ya</string>
+    <string name="title_login_page">Sudah siap berbagi kebahagiaan?</string>
+    <string name="name">Nama</string>
+    <string name="copyright">© 2021 Ramdhan</string>
+    <string name="message_main_page">Selamat menggunakan StoryApp.</string>
+    <string name="greeting">Halo %1$s,</string>
+    <string name="logout">Keluar</string>
+    <string name="belum_punya_akun_daftar_disini">Belum punya akun?</string>
+    <string name="singUp">Daftar</string>
 </resources>
