perbaikan fitur login signup dengan adanya custom view untuk mengecek apakah karakter input lebih dari 6 atau tidak

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
     <string name="logout">Keluar</string>
     <string name="belum_punya_akun_daftar_disini">Belum punya akun?</string>
     <string name="singUp">Daftar</string>
+    <string name="logo_aplikasi">logo aplikasi</string>
 </resources>
