Merapikan meja kerja

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,5 @@
     <string name="galeri">Galeri</string>
     <string name="kamera">Kamera</string>
     <string name="story_picture">Story Picture</string>
+    <string name="story_pengguna">Story pengguna</string>
 </resources>
